@@ -1,4 +1,5 @@
 $|=1;
+$^W=0;
 BEGIN { print "1..5\n" }
 
 # we avoid complicated tests here because some systems will
